--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -70,6 +70,6 @@ jobs:
     - uses: actions/checkout@v2
     - uses: akhileshns/heroku-deploy@v3.0.4 # This is the action
       with:
-        heroku_api_key: ${{secrets.10d923be-4a99-4a19-b087-64f6dea89d43}}
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_app_name: "toolboxerino" # Must be unique in Heroku
-        heroku_email: ${{secrets.noam.perry@hotmail.com}}
+        heroku_email: ${{secrets.HEROKU_EMAIL}}
